overflow fix

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -7,7 +7,7 @@
 
 
 body {
-    overflow: hidden;
+    overflow-x: hidden;
     overflow-y: scroll;
     color: #292929;
     font-size: 1.2rem;
@@ -51,8 +51,8 @@ body {
     min-width: 100%;
     position: relative;
     top: 0;
-    bottom: 100%;
     left: 0;
+    bottom: 100%;
     z-index: 1;
     box-shadow: none;
 }
